--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "body-parser": "^1.19.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "http": "^0.0.1-security",
     "path": "^0.12.7",
     "qs": "^6.10.1",
     "roboto-fontface": "*",
+    "socket.io": "^4.4.0",
     "video.js": "^7.15.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
