--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - |
-      npm install
+      npm  --registry https://registry.npm.taobao.org install
       npm run build
   artifacts:
     paths:
