--- a/.drone.yml
+++ b/.drone.yml
@@ -5,6 +5,6 @@ name: default
 steps:
   - name: npm install and build
     image: node:17
-    command:
+    commands:
       - |
         npm install --registry https://registry.npm.taobao.org && npm run build
