--- a/.drone.yml
+++ b/.drone.yml
@@ -8,3 +8,18 @@ steps:
     commands:
       - |
         npm install --registry https://registry.npm.taobao.org && npm run build
+
+  - name: transfer file to server
+    image: appleboy/drone-scp
+    settings:
+      host:
+        from_secret: SSH_TARGET
+      username:
+        from_secret: SSH_USERNAME
+      port: 22
+      key:
+        from_secret: SSH_PRIVATE_KEY
+      target:
+        from_secret: DEPLOY_PATH
+      source: dist/*
+      rm: true
